# agent-mvp

./: .gitmodules  Cargo.toml  README.md  move
.github/workflows/: ci.yml
crates/access-fs/: Cargo.toml
crates/access-fs/src/: access.rs  action.rs  backend.rs  lib.rs  policy.rs  tests.rs
crates/access-monty/: Cargo.toml
crates/access-monty/src/: access.rs  action.rs  lib.rs  policy.rs  store.rs
crates/access-network/: Cargo.toml
crates/access-network/src/: access.rs  action.rs  backend.rs  lib.rs  policy.rs  tests.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  policy_pipeline.rs
crates/builtin/: Cargo.toml
crates/builtin/src/: double.rs  lib.rs  read_file.rs  write_file.rs
crates/contract/: Cargo.toml
crates/contract/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: action.rs  error.rs  lib.rs
crates/core/src/policy/: context.rs  grant.rs  mod.rs  traits.rs
crates/core/src/tool/: adapter.rs  context.rs  host.rs  mod.rs  registration.rs  sealed.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: action.rs  audit.rs  error.rs  kernel.rs  lib.rs  policy.rs  policy_context.rs  test_utils.rs
crates/kernel/src/pipeline/: mod.rs
crates/kernel/src/policy/: builtins.rs  context.rs  decision.rs  erased.rs  grant.rs  mod.rs  pipeline.rs  plane.rs  registry.rs  traits.rs
crates/kernel/src/runtime/: mod.rs
crates/kernel/src/service/: fs.rs  mod.rs  network.rs
crates/kernel/src/service/fs/: access.rs  action.rs  backend.rs  mod.rs  policy.rs
crates/kernel/src/service/network/: access.rs  action.rs  backend.rs  mod.rs  policy.rs
crates/kernel/src/tool/: adapter.rs  context.rs  invocation.rs  mod.rs  plane.rs  registration.rs  registry.rs  test_utils.rs
crates/kernel/tests/: external_service.rs  tool_path.rs
crates/monty-tool/: Cargo.toml
crates/monty-tool/src/: lib.rs
crates/service-fs/: Cargo.toml
crates/service-fs/src/: action.rs  backend.rs  lib.rs  policy.rs  service.rs  tests.rs
crates/service-monty/: Cargo.toml
crates/service-monty/src/: action.rs  lib.rs  service.rs  store.rs
crates/service-network/: Cargo.toml
crates/service-network/src/: backend.rs  lib.rs  service.rs  tests.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs  policy_pipeline.rs
crates/tool-builtin/: Cargo.toml
crates/tool-builtin/src/: double.rs  read_file.rs  write_file.rs
crates/tool-monty/: Cargo.toml
crates/tool-monty/src/: lib.rs
docs/: architecture.md  design.md
examples/: demo.rs
examples/demo/: main.rs  scenario.rs  tracing_config.rs
