[package]
name = "mvp"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = [
    "crates/contract",
    "crates/kernel",
    "crates/builtin",
    "crates/app",
    "crates/monty-tool",
]
default-members = [
    ".",
    "crates/contract",
    "crates/kernel",
    "crates/builtin",
    "crates/app",
    "crates/monty-tool",
]
resolver = "2"
exclude = ["third_party/monty"]

[workspace.dependencies]
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bitflags = "2.13.0"
mvp-contract = { path = "crates/contract" }
mvp-kernel = { path = "crates/kernel" }
mvp-builtin = { path = "crates/builtin" }
mvp-app = { path = "crates/app" }
mvp-monty-tool = { path = "crates/monty-tool" }

[dependencies]
serde_json.workspace = true
tokio.workspace = true
mvp-contract.workspace = true
mvp-kernel.workspace = true
mvp-builtin.workspace = true
mvp-app.workspace = true
mvp-monty-tool.workspace = true
tracing-subscriber.workspace = true
