[package]
name = "mvp"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = [
    "crates/contract",
    "crates/core",
    "crates/kernel",
    "crates/access-fs",
    "crates/access-monty",
    "crates/access-network",
    "crates/test-support",
    "crates/tool-builtin",
    "crates/app",
    "crates/tool-monty",
]
default-members = [
    ".",
    "crates/contract",
    "crates/core",
    "crates/kernel",
    "crates/access-fs",
    "crates/access-monty",
    "crates/access-network",
    "crates/test-support",
    "crates/tool-builtin",
    "crates/app",
    "crates/tool-monty",
]
resolver = "2"
exclude = ["third_party/monty"]

[workspace.dependencies]
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-opentelemetry = "0.33"
opentelemetry = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.32", features = ["trace", "rt-tokio"] }
bitflags = "2.13.0"
mvp-contract = { path = "crates/contract" }
mvp-core = { path = "crates/core" }
mvp-kernel = { path = "crates/kernel" }
mvp-access-fs = { path = "crates/access-fs" }
mvp-access-monty = { path = "crates/access-monty" }
mvp-access-network = { path = "crates/access-network" }
mvp-test-support = { path = "crates/test-support" }
mvp-tool-builtin = { path = "crates/tool-builtin" }
mvp-app = { path = "crates/app" }
mvp-tool-monty = { path = "crates/tool-monty" }

[dependencies]
serde_json.workspace = true
tokio.workspace = true
mvp-contract.workspace = true
mvp-core.workspace = true
mvp-kernel.workspace = true
mvp-access-fs.workspace = true
mvp-access-monty.workspace = true
mvp-tool-builtin.workspace = true
mvp-app.workspace = true
mvp-tool-monty.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
