[package]
name = "mvp-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
anymap = "0.12.1"
async-trait.workspace = true
serde_json.workspace = true
mvp-contract.workspace = true
mvp-core.workspace = true
mvp-access-fs.workspace = true
mvp-access-monty.workspace = true
mvp-access-network.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
mvp-core.workspace = true
