[package]
name = "mvp-tool-builtin"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
mvp-contract.workspace = true
mvp-core.workspace = true
mvp-access-fs.workspace = true

[dev-dependencies]
tokio.workspace = true
mvp-test-support.workspace = true
mvp-access-network.workspace = true
